--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@mui/material": "^7.3.4",
+    "@mui/styled-engine-sc": "^7.3.3",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
-    "stripe": "^19.1.0"
+    "stripe": "^19.1.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
