--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@mui/material": "^7.3.4",
     "@mui/styled-engine-sc": "^7.3.3",
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.14",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "stripe": "^19.1.0",
     "styled-components": "^6.1.19"
   },
