--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mui/material": "^7.3.4",
     "@mui/styled-engine-sc": "^7.3.3",
+    "@stripe/stripe-js": "^8.2.0",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.14",
     "lucide-react": "^0.546.0",
